Edditing Initial pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,33 +135,35 @@ nav>a>img {
 
 }
 footer {
-    background-color: #1F4064;
+    background-color: white;
     height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    color: white;
+    color: #1F4064;
     font-size: 18px;
     
-    div {
-
+    & div {
+        margin: 50px 0 0 20px;
         place-self:start;
-        transform: translate(25px,25px);
+        /* transform: translate(25px,25px); */
     }
-    p {
+    & p {
         margin-top: 10px;
         text-align: center;
     }
-    ul {
+    & ul {
+
          list-style: none;
          display: flex;
          flex-direction: column;
+         flex-wrap: wrap;
          row-gap: 10px;
     }
     ul > li > a {
         font-size: large;
-        color: white;
+        color: #1F4064;
     }
     ul > li > a:hover {
         
@@ -307,7 +309,7 @@ footer {
 /*/////////////////*/
 main {
     background-color: aliceblue;
-    
+    margin: 20px 0;
     height: 80vh;
     position: relative;
 }
@@ -581,3 +583,4 @@ display: none;
     height: 350px;
     
  }
+
