--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,6 +583,13 @@ display: none;
     height: 350px;
     
  }
+
+
+ .error {
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: red;
+}
 .card {
     display: flex;
     flex-direction: column;
