--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,16 +480,17 @@ display: none;
     display: flex;
     flex-direction: column;
     align-items: center;
+    place-self: center;
     justify-content: start;
     width: 300px;
-    height: 450px;
+    height: 380px;
     background-color: #1F4064;
     color: white;
     margin-top: 40px;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    display: none;
+    /* display: none; */
     
     h2 {
         font-size: 24px;
@@ -579,10 +580,7 @@ display: none;
 
     }
  }
- .addClient,.addCar {
-    height: 350px;
-    
- }
+ 
 
 
  .error {
@@ -689,6 +687,7 @@ display: none;
 
 .car-listing-main {
     display: flex;
+    width: 100%;
     padding: 50px 20px;
     & .filter-section {
         width: 160px;
@@ -699,6 +698,7 @@ display: none;
 .car-listing {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
     width: 100%;
     height: 100%;
@@ -707,3 +707,21 @@ display: none;
 
 }
 
+.addCarBtn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #1F4064;
+    color: white;
+    font-size: medium;
+    cursor: pointer;
+    display: flex;
+    place-self: end;
+    
+    &:hover {
+        background-color: #22700c;
+        color: white;
+        transition: background-color 0.3s ease-in-out;
+    }
+
+}
